change header values

--- a/src/configs/intermediate-openssl.conf
+++ b/src/configs/intermediate-openssl.conf
@@ -61,7 +61,7 @@ commonName                      = Common Name (eg, your name or your server\'s h
 commonName_max                  = 64
 emailAddress                    = Email Address
 emailAddress_max                = 64
-emailAddress_default            = sec@re.demo
+emailAddress_default            = sec@test.testing
 
 [ v3_ca ]
 subjectKeyIdentifier=hash
