--- a/src/configs/intermediate-openssl.conf
+++ b/src/configs/intermediate-openssl.conf
@@ -51,11 +51,11 @@ countryName_default             = US
 countryName_min                 = 2
 countryName_max                 = 2
 stateOrProvinceName             = State or Province Name (full name)
-stateOrProvinceName_default     = Testing
+stateOrProvinceName_default     = CA
 localityName                    = Locality Name (eg, city)
-localityName_default            = Testing
+localityName_default            = Testland
 0.organizationName              = Organization Name (eg, company)
-0.organizationName_default      = Testing
+0.organizationName_default      = Testers
 organizationalUnitName          = Organizational Unit Name (eg, section)
 commonName                      = Common Name (eg, your name or your server\'s hostname)
 commonName_max                  = 64
